--- a/home.html
+++ b/home.html
@@ -63,9 +63,48 @@
             </div>
         </main>
     </section>
+    <!-- Add money section -->
+
+    <div class="max-w-[430px] mx-auto pt-5"  id="add-money">
+        <h2 class="text-xl font-semibold">Add Money</h2>
+
+        <div>
+            <div class="hero-content flex-col lg:flex-row-reverse">
+                <div class="card bg-base-100 w-full  shadow-xl rounded-2xl">
+                    <div class="card-body">
+                        <fieldset class="fieldset">
+                            <select title="select" id="add-money-bank" class="select border-none rounded-full bg-[#F4F5F7]  text-[1rem]">
+                                <option disabled selected>Select bank</option>
+                                <option>Pubali Bank</option>
+                                <option>AB Bank</option>
+                                <option>Dutch Bangla Bank</option>
+                            </select>
+                            <label class="label text-lg">Bank Account Number</label>
+                            <input id="add-money-number" maxlength="11" type="text"
+                                class="input text-[1rem] border-none bg-[#F4F5F7] rounded-full py-6"
+                                placeholder="Enter 11 digit number" />
+                            <label class="label text-lg">Amount to Add</label>
+                            <input id="add-money-amount" maxlength="" type="text"
+                                class="input text-[1rem] border-none bg-[#F4F5F7] rounded-full py-6"
+                                placeholder="Enter amount to withdraw" />
+
+                            <label class="label text-lg">Pin Number</label>
+                            <input id="add-money-pin" maxlength="4" type="password"
+                                class="input text-[1rem] border-none bg-[#F4F5F7] rounded-full py-6"
+                                placeholder="Enter 4 digit pin number" />
+                            <button id="add-money-btn" class="btn btn-primary mt-5  py-6 bg-[#3B25C1] rounded-full text-lg">Add
+                                Money</button>
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Cashout section -->
+
+
     <div class="max-w-[430px] mx-auto pt-5">
         <h2 class="text-xl font-semibold">Cash Out</h2>
-
 
         <div>
             <div class="hero-content flex-col lg:flex-row-reverse">
@@ -86,7 +125,8 @@
                                 class="input text-[1rem] border-none bg-[#F4F5F7] rounded-full py-6"
                                 placeholder="Enter 4 digit pin number" />
                             <button id="cashout"
-                                class="btn btn-primary mt-5  py-6 bg-[#3B25C1] rounded-full text-lg">Withdraw Money</button>
+                                class="btn btn-primary mt-5  py-6 bg-[#3B25C1] rounded-full text-lg">Withdraw
+                                Money</button>
                         </fieldset>
                     </div>
                 </div>
@@ -94,6 +134,9 @@
         </div>
     </div>
     <script src="./script/cashout.js"></script>
+    
+    <script src="./script/machine.js"></script>
+    <script src="./script/addMoney.js"></script>
 </body>
 
 </html>
