--- a/home.html
+++ b/home.html
@@ -48,24 +48,24 @@
         </hero>
         <main class="mt-10 pb-8">
             <div class="max-w-[430px] grid grid-cols-3 gap-4 mx-auto">
-                <button class="btn flex-col h-full py-4 btn-soft"><span><img src="./images/opt-1.png"
+                <button onclick="showOnly('add-money')" class="btn flex-col h-full py-4 btn-primary btn-soft"><span><img src="./images/opt-1.png"
                             alt="add money" /></span> Add Money</button>
-                <button class="btn flex-col h-full py-4 btn-soft"><span><img src="./images/opt-2.png"
-                            alt="add money" /></span> Add Money</button>
-                <button class="btn flex-col h-full py-4 btn-soft"><span><img src="./images/opt-3.png"
-                            alt="add money" /></span> Add Money</button>
-                <button class="btn flex-col h-full py-4 btn-soft"><span><img src="./images/opt-4.png"
-                            alt="add money" /></span> Add Money</button>
-                <button class="btn flex-col h-full py-4 btn-soft"><span><img src="./images/opt-5.png"
-                            alt="add money" /></span> Add Money</button>
-                <button class="btn flex-col h-full py-4 btn-soft"><span><img src="./images/opt-6.png"
-                            alt="add money" /></span> Add Money</button>
+                <button onclick="showOnly('cashOut')" class="btn flex-col h-full py-4 btn-primary  btn-soft"><span><img src="./images/opt-2.png"
+                            alt="add money" /></span>Cashout</button>
+                <button class="btn flex-col h-full py-4 btn-primary  btn-soft"><span><img src="./images/opt-3.png"
+                            alt="add money" /></span>Send Money</button>
+                <button class="btn flex-col h-full py-4 btn-primary  btn-soft"><span><img src="./images/opt-4.png"
+                            alt="add money" /></span>Get Bonus</button>
+                <button class="btn flex-col h-full py-4 btn-primary  btn-soft"><span><img src="./images/opt-5.png"
+                            alt="add money" /></span>Pay Bill</button>
+                <button class="btn flex-col h-full py-4 btn-primary btn-soft"><span><img src="./images/opt-6.png"
+                            alt="add money" /></span>Transactions</button>
             </div>
         </main>
     </section>
     <!-- Add money section -->
 
-    <div class="max-w-[430px] mx-auto pt-5"  id="add-money">
+    <div class="max-w-[430px] mx-auto pt-5 mb-10 " id="add-money">
         <h2 class="text-xl font-semibold">Add Money</h2>
 
         <div>
@@ -73,7 +73,8 @@
                 <div class="card bg-base-100 w-full  shadow-xl rounded-2xl">
                     <div class="card-body">
                         <fieldset class="fieldset">
-                            <select title="select" id="add-money-bank" class="select border-none rounded-full bg-[#F4F5F7]  text-[1rem]">
+                            <select title="select" id="add-money-bank"
+                                class="select border-none rounded-full bg-[#F4F5F7]  text-[1rem]">
                                 <option disabled selected>Select bank</option>
                                 <option>Pubali Bank</option>
                                 <option>AB Bank</option>
@@ -92,7 +93,8 @@
                             <input id="add-money-pin" maxlength="4" type="password"
                                 class="input text-[1rem] border-none bg-[#F4F5F7] rounded-full py-6"
                                 placeholder="Enter 4 digit pin number" />
-                            <button id="add-money-btn" class="btn btn-primary mt-5  py-6 bg-[#3B25C1] rounded-full text-lg">Add
+                            <button id="add-money-btn"
+                                class="btn btn-primary mt-5  py-6 bg-[#3B25C1] rounded-full text-lg">Add
                                 Money</button>
                         </fieldset>
                     </div>
@@ -103,7 +105,7 @@
     <!-- Cashout section -->
 
 
-    <div class="max-w-[430px] mx-auto pt-5">
+    <div class="max-w-[430px] mx-auto pt-5 mb-10 hidden" id="cashOut">
         <h2 class="text-xl font-semibold">Cash Out</h2>
 
         <div>
@@ -134,7 +136,7 @@
         </div>
     </div>
     <script src="./script/cashout.js"></script>
-    
+
     <script src="./script/machine.js"></script>
     <script src="./script/addMoney.js"></script>
 </body>
