file path updated

--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
     </section>
     <!-- Add money section -->
 
-    <div class="max-w-[430px] mx-auto pt-5 mb-10 " id="add-money">
+    <div class="max-w-[430px] mx-auto pt-5 mb-10" id="add-money">
         <h2 class="text-xl font-semibold">Add Money</h2>
 
         <div>
@@ -135,10 +135,12 @@
             </div>
         </div>
     </div>
-    <script src="./script/cashout.js"></script>
-
+    <!-- <script src="./script/cashout.js"></script>
     <script src="./script/machine.js"></script>
-    <script src="./script/addMoney.js"></script>
+    <script src="./script/addMoney.js"></script> -->
+    <script src="/script/cashout.js"></script>
+    <script src="/script/machine.js"></script>
+    <script src="/script/addMoney.js"></script>
 </body>
 
 </html>
