--- a/login.html
+++ b/login.html
@@ -42,7 +42,8 @@
         
     </section>
 
-    <script src="./script/login.js"></script>
+    <!-- <script src="./script/login.js"></script> -->
+     <script src="/script/login.js"></script>
 </body>
 
 </html>
