--- a/home.html
+++ b/home.html
@@ -135,12 +135,12 @@
             </div>
         </div>
     </div>
-    <!-- <script src="./script/cashout.js"></script>
+    <script src="./script/cashout.js"></script>
     <script src="./script/machine.js"></script>
-    <script src="./script/addMoney.js"></script> -->
-    <script src="/script/cashout.js"></script>
+    <script src="./script/addMoney.js"></script>
+    <!-- <script src="/script/cashout.js"></script>
     <script src="/script/machine.js"></script>
-    <script src="/script/addMoney.js"></script>
+    <script src="/script/addMoney.js"></script> -->
 </body>
 
 </html>
